<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditSignupActivity"
    >

    <!-- Signup form layout -->
    <TextView
        android:id="@+id/signUp_TW"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="0dp"
        android:background="@drawable/gradient_background"
        android:gravity="center"
        android:text="@string/signUp_btn_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/signUpFormLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signUpFormLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822">

        <!-- Select avatar photo layout -->
        <LinearLayout
            android:id="@+id/imageSelectLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/signUpFormLayout"
            app:layout_constraintRight_toRightOf="@id/signUpFormLayout"
            app:layout_constraintTop_toTopOf="@id/signUpFormLayout">

            <ImageView
                android:id="@+id/selectImage_IW"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/avatar_image" />
        </LinearLayout>

        <!-- First name and last name input layout -->
        <LinearLayout
            android:id="@+id/firstLastLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            app:layout_constraintLeft_toLeftOf="@id/signUpFormLayout"
            app:layout_constraintRight_toRightOf="@id/signUpFormLayout"
            app:layout_constraintTop_toBottomOf="@id/imageSelectLinearLayout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:startIconDrawable="@drawable/first_name_icon">

                <EditText
                    android:id="@+id/firstNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edittext_layout"
                    android:hint="First Name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:startIconDrawable="@drawable/first_name_icon">

                <EditText
                    android:id="@+id/lastNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edittext_layout"
                    android:hint="Last Name" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Email Address input layout -->
        <LinearLayout
            android:id="@+id/emailAddressLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/signUpFormLayout"
            app:layout_constraintRight_toRightOf="@id/signUpFormLayout"
            app:layout_constraintTop_toBottomOf="@id/firstLastLinearLayout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailAddressInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:startIconDrawable="@drawable/email_icon">

                <EditText
                    android:id="@+id/emailAddressET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edittext_layout"
                    android:hint="@string/email_address_hint"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Password input layout -->
        <LinearLayout
            android:id="@+id/passwordLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/signUpFormLayout"
            app:layout_constraintRight_toRightOf="@id/signUpFormLayout"
            app:layout_constraintTop_toBottomOf="@id/emailAddressLinearLayout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/password_icon">

                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edittext_layout"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <!-- Birthdate input layout -->
        <LinearLayout
            android:id="@+id/dateLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="1"
            app:layout_constraintLeft_toLeftOf="@id/signUpFormLayout"
            app:layout_constraintRight_toRightOf="@id/signUpFormLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordLinearLayout">

            <LinearLayout
                android:background="@drawable/custom_edittext_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/gender_icon"
                    android:paddingLeft="10dp"/>
                <Spinner
                    android:id="@+id/genderSelect_SP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="15dp"
                    />
            </LinearLayout>


            <Button
                android:id="@+id/selectBirthday_BTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginVertical="10dp"
                android:drawableEnd="@drawable/arrow_down_icon"
                android:text="@string/select_birth_date_text"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/saveChangesBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_changes_text" />
            <Button
                android:id="@+id/signupBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp_btn_title" />
            <Button
                android:id="@+id/changePasswordBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/birth_date_day_text"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/birth_date_month_text"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/birth_date_year_text"
                    android:textSize="20sp"
                    android:visibility="gone" />
            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>