<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addImage_BTN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostUploadActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="#40000000"
        android:visibility="gone"
        >

        <!--set the custom progress bar here in
            the indeterminateDrawable attribute-->
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/custom_progressbar"
            android:progress="0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/progressbar"
            android:gravity="center"
            android:textColor="@color/action_bar_red"
            android:textStyle="bold"
            android:text="Post Uploading..."
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:textSize="24sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>




   <LinearLayout
       android:id="@+id/postDetailsLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:orientation="vertical"
       android:weightSum="5"
       android:visibility="visible"
       >

       <TextView
           android:id="@+id/addPostTW"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Add a post"
           android:textSize="24sp"
           android:gravity="center"
           android:layout_marginTop="8dp"/>

       <EditText
           android:id="@+id/postTitleET"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="5dp"
           android:layout_marginTop="12dp"
           android:hint="@string/post_title_et_hint"
           android:padding="16dp"
           android:textStyle="bold"
           android:background="@drawable/custom_edittext_layout"/>
       <ImageView
           android:id="@+id/postImageIW"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="3"
           android:visibility="gone"
           android:layout_marginTop="12dp"
           android:src="@drawable/no_image_selected"
           android:layout_marginHorizontal="8dp"
           />
       <ImageButton
           android:id="@+id/deletePostImageBTN"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/delete_icon"
           android:layout_gravity="center"
           android:padding="15dp"
           android:layout_marginTop="12dp"
           android:visibility="gone"
           />
        <EditText
            android:id="@+id/postCommentET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext_layout"
            android:hint="@string/post_comment_et_hint"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:gravity="start"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:layout_weight="1.5"
            />


       <GridLayout
           android:id="@+id/locationLayout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:rowCount="1"
           android:columnCount="2"
           android:layout_gravity="center"
           android:layout_marginTop="12dp"
           android:visibility="gone"
           >
           <TextView
               android:id="@+id/locationInfoTW"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="18sp"
               android:gravity="center"
               android:padding="5dp"
               android:text="Address"
               android:textStyle="bold"
               android:layout_marginTop="8dp"
               android:layout_columnWeight="1" />
           <ImageButton
               android:id="@+id/deleteLocationInfoBTN"
               android:src="@drawable/delete_icon"
               android:layout_columnWeight="1"/>
       </GridLayout>


       <GridLayout
           android:id="@+id/optionalButtonsLayout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:rowCount="2"
           android:columnCount="2"
           android:layout_marginHorizontal="5dp"
           android:layout_marginTop="12dp"
           >

           <Button
               android:id="@+id/addPostLocationBTN"
               android:text="@string/add_location_btn_text"
               android:drawableLeft="@drawable/location_marker"
               android:layout_width="0dp"
               android:layout_columnWeight="1"
               android:layout_marginRight="5dp"
               android:layout_column="0"
               android:layout_row="0"
               />
           <Button
               android:id="@+id/addPostImageBTN"
               android:text="@string/add_image_btn_text"
               android:drawableLeft="@drawable/image_icon"
               android:layout_width="0dp"
               android:layout_columnWeight="1"
               android:layout_gravity="center_vertical"
               android:layout_column="1"
               android:layout_row="0" />
       </GridLayout>

       <Button
           android:id="@+id/shareBTN"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="5dp"
           android:text="@string/share_post_btn_text"/>



   </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>